--- a/Point of Sale/OrderControl.xaml
+++ b/Point of Sale/OrderControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Point_of_Sale"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="475" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="Button">
             <Setter Property="Height" Value="75"/>
@@ -20,15 +20,23 @@
         </Grid.ColumnDefinitions>
         <StackPanel>
             <TextBlock TextAlignment="Center">Entrees</TextBlock>
-            <Button>Angry Chicken</Button>
-            <Button>Cowpoke Chili</Button>
-      
+            <Button Name="AddAngryChickenButton" Click="AddAngryChickenButton_Click" >Angry Chicken</Button>
+            <Button Name="AddCowpokeChili" Click="AddCowpokeChili_Click">Cowpoke Chili</Button>
+            <Button Name ="AddDakotaDoubleBurger" Click="AddDakotaDoubleBurger_Click">Dakota Double Burger</Button>
+            <Button Name ="AddPecosPulledPork" Click="AddPecosPulledPork_Click">Pecos Pulled Pork</Button>
+            <Button Name ="AddTexasTripleBurger" Click="AddTexasTripleBurger_Click">Texas Triple Burger</Button>
+            <Button Name ="AddTrailBurger" Click="AddTrailBurger_Click">Trail Burger</Button>
         </StackPanel>
 
         <StackPanel Grid.Column="1">
-            <TextBlock TextAlignment="Center">Side</TextBlock>
-            <Button>Chili Cheese Fries</Button>
+            <TextBlock TextAlignment="Center">Sides</TextBlock>
+            <Button Name ="AddChiliCheeseFries" Click="AddChiliCheeseFries_Click">Chili Cheese Fries</Button>
             
+        </StackPanel>
+
+        <StackPanel Grid.Column="2">
+            <TextBlock TextAlignment="Center">Drinks</TextBlock>
+            <Button Name ="AddJerkedSoda" Click="AddJerkedSoda_Click">Jerked Soda</Button>
         </StackPanel>
 
         <StackPanel Grid.Column="3">
