--- a/Point of Sale/OrderControl.xaml
+++ b/Point of Sale/OrderControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Point_of_Sale"
              mc:Ignorable="d" 
-             d:DesignHeight="475" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="Button">
             <Setter Property="Height" Value="75"/>
@@ -26,6 +26,7 @@
             <Button Name ="AddPecosPulledPork" Click="AddPecosPulledPork_Click">Pecos Pulled Pork</Button>
             <Button Name ="AddTexasTripleBurger" Click="AddTexasTripleBurger_Click">Texas Triple Burger</Button>
             <Button Name ="AddTrailBurger" Click="AddTrailBurger_Click">Trail Burger</Button>
+            <Button Name ="AddRustlerRibs" Click="AddRustlerRibs_Click">Rustler's Ribs</Button>
         </StackPanel>
 
         <StackPanel Grid.Column="1">
