--- a/Point of Sale/OrderSummaryControl.xaml
+++ b/Point of Sale/OrderSummaryControl.xaml
@@ -5,24 +5,46 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Point_of_Sale"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="400">
+             d:DesignHeight="450" d:DesignWidth="300">
     <UserControl.Resources>
-        <Style TargetType="ListBox">
+        <Style TargetType="ListView">
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         </Style>
     </UserControl.Resources>
-    <StackPanel>
-        <TextBlock>Order
-            //<ListBox ItemsSource="{Binding Path=}"
-        </TextBlock>
-        <Grid>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="400"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition Width="50"/>
+            <ColumnDefinition Width="100"/>
         </Grid.ColumnDefinitions>
-        <TextBox Name="Receipt"/>
-        
-    </Grid>
+        <StackPanel>
+        <TextBlock HorizontalAlignment="Center">Order</TextBlock>
+            
+                
+        <ListView ItemsSource="{Binding Path=Items}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                     <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{Binding}"></TextBlock>
+                        <TextBlock Grid.Column="1" Text="{Binding Path= Price, Mode=OneWay, StringFormat=c}"></TextBlock>
+                        </Grid>
+                </DataTemplate>
+
+            </ListBox.ItemTemplate>
+            
+        </ListView>
+
     </StackPanel>
+        <TextBox Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Left">Subtotal</TextBox>
+        <TextBox Grid.Row="1" HorizontalAlignment="Right" Text="{Binding Path= Subtotal, Mode=OneWay, StringFormat=c}"/>
+    </Grid>
+    
     
 </UserControl>
