--- a/Point of Sale/OrderSummaryControl.xaml
+++ b/Point of Sale/OrderSummaryControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Point_of_Sale"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="300">
+             d:DesignHeight="450" d:DesignWidth="400">
     <UserControl.Resources>
         <Style TargetType="ListView">
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -16,35 +16,34 @@
             <RowDefinition Height="400"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="100"/>
-        </Grid.ColumnDefinitions>
+
         <StackPanel>
-        <TextBlock HorizontalAlignment="Center">Order</TextBlock>
-            
-                
-        <ListView ItemsSource="{Binding Path=Items}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                     <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Text="{Binding}"></TextBlock>
-                        <TextBlock Grid.Column="1" Text="{Binding Path= Price, Mode=OneWay, StringFormat=c}"></TextBlock>
+
+
+            <TextBox HorizontalAlignment="Center" Width="375" Height="25" Text="{Binding Path=OrderNumber, Mode=OneWay, StringFormat='Order {0}'}"/>
+
+
+            <ListView Width="375" Height="375" ItemsSource="{Binding Items}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="250"/>
+                                <ColumnDefinition Width="150"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock HorizontalAlignment="Left" Width="200" Text="{Binding}"/>
+                            <TextBlock  Grid.Column="1" Width="50" Text="{Binding Price, Mode=OneWay, StringFormat=c}"/>
                         </Grid>
-                </DataTemplate>
+                    </DataTemplate>
 
-            </ListBox.ItemTemplate>
-            
-        </ListView>
+                </ListView.ItemTemplate>
 
-    </StackPanel>
-        <TextBox Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Left">Subtotal</TextBox>
-        <TextBox Grid.Row="1" HorizontalAlignment="Right" Text="{Binding Path= Subtotal, Mode=OneWay, StringFormat=c}"/>
+            </ListView>
+
+        </StackPanel>
+        <TextBox Grid.Row="1" VerticalAlignment="Center" Height="50" Margin="10,0,75,0">Subtotal</TextBox>
+        <TextBox Grid.Row="1" HorizontalAlignment="Right" Height="50" Width="100" Text="{Binding Path= Subtotal, Mode=OneWay, StringFormat=c}"/>
     </Grid>
-    
-    
+
+
 </UserControl>
