--- a/Point of Sale/OrderSummaryControl.xaml
+++ b/Point of Sale/OrderSummaryControl.xaml
@@ -31,9 +31,14 @@
                                 <ColumnDefinition Width="250"/>
                                 <ColumnDefinition Width="150"/>
                             </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
                             <TextBlock HorizontalAlignment="Left" Width="200" Text="{Binding}"/>
                             <TextBlock  Grid.Column="1" Width="50" Text="{Binding Price, Mode=OneWay, StringFormat=c}"/>
                             <TextBlock Text="{Binding Path = items}" Grid.Row="1" Grid.Column="2"/>
+                            <ListView Grid.Row="1" ItemsSource="{Binding Path=SpecialInstructions}"/>
                         </Grid>
                     </DataTemplate>
 
