--- a/Point of Sale/Customization/BakedBeansCustomization.xaml
+++ b/Point of Sale/Customization/BakedBeansCustomization.xaml
@@ -5,8 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Point_of_Sale.Customization"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="300" d:DesignWidth="400">
     <Grid>
-            
+        <StackPanel>
+            <TextBlock FontSize="35">Baked Beans</TextBlock>
+        </StackPanel>
     </Grid>
 </UserControl>
