--- a/Point of Sale/Customization/CowpokeCoffeeCustomization.xaml
+++ b/Point of Sale/Customization/CowpokeCoffeeCustomization.xaml
@@ -7,6 +7,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="400">
     <Grid>
-            
+        <StackPanel>
+            <TextBlock FontSize="35">Cowpoke Coffee</TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding Path=Ice}"/>
+                <TextBlock Text="Ice"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding Path=Decaf}"/>
+                <TextBlock Text="Decaf"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding Path=RoomForCream}"/>
+                <TextBlock Text="Room For Cream"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </UserControl>
