--- a/Point of Sale/Customization/PecosPulledPorkCustomization.xaml
+++ b/Point of Sale/Customization/PecosPulledPorkCustomization.xaml
@@ -7,6 +7,16 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="400">
     <Grid>
-            
+        <StackPanel>
+            <TextBlock FontSize="35">Pecos Pulled Pork</TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding Path=Bread}"/>
+                <TextBlock Text="Bread"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <CheckBox IsChecked="{Binding Path=Pickle}"/>
+                <TextBlock Text="Pickle"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </UserControl>
