--- a/Point of Sale/OrderSummaryControl.xaml
+++ b/Point of Sale/OrderSummaryControl.xaml
@@ -28,16 +28,18 @@
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="250"/>
-                                <ColumnDefinition Width="150"/>
+                                <ColumnDefinition Width="175"/>
+                                <ColumnDefinition Width="125"/>
+                                <ColumnDefinition Width="25"/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
-                            <TextBlock HorizontalAlignment="Left" Width="200" Text="{Binding}"/>
-                            <TextBlock  Grid.Column="1" Width="50" Text="{Binding Price, Mode=OneWay, StringFormat=c}"/>
+                            <TextBlock HorizontalAlignment="Left" Width="175" Text="{Binding}"/>
+                            <TextBlock  Grid.Column="1" Width="125" Text="{Binding Price, Mode=OneWay, StringFormat=c}"/>
                             <TextBlock Text="{Binding Path = items}" Grid.Row="1" Grid.Column="2"/>
+                            <Button Background="Red" Grid.Column="2" Width="25" Click="OnDeleteItemButtonClicked">x</Button>
                             <ListView Grid.Row="1" ItemsSource="{Binding Path=SpecialInstructions}"/>
                         </Grid>
                     </DataTemplate>
