--- a/Website/Pages/Index.cshtml
+++ b/Website/Pages/Index.cshtml
@@ -5,61 +5,146 @@
     ViewData["Title"] = "Home page";
 }
 
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<h1>Cowboy Cafe</h1>
-<p>We at Cowboy Cafe are proud to bring you authentic trail meals from the American West.
-    Shake off the dust on your boots and sake your thirst with one of our old-fashioned
-    hand-jerked sodas. Dip your Pan de Campo into a bowl of beans.
-    Or conquer the mighty Texas Triple Burger! You've had a hard ride - so take it easy with us</p>
-<h2>Entree</h2>
-<ul class="entrees">
-    @foreach(IOrderItem entree in Menu.AllEntrees)
-    {
-        <li>
-            <div class="menu-item">
-                <h3 class="name">@entree.ToString()</h3>
-                <div class="price">Price @entree.Price</div>
-                <div class="calories">Calories @entree.Calories</div>
-            </div>
+<form id="cafe-database">
+    <div id="search">
+        <input type="text" name="SearchTerms" value="@Model.SearchTerms" />
+        <input type="submit" name="Search" />
+    </div>
 
-            
-        </li>
-    }
+    <div id="filters">
+        <h4>Order Item</h4>
+        @foreach (string items in Menu.itemType)
+        {
+            <label>
+                <input type="checkbox" name="itemType" value="@items" checked="@Model.itemType.Contains(items)" />
+                @items
+            </label>
+        }
 
-</ul>
-<h2>Sides</h2>
-<ul class="sides">
-    @foreach(IOrderItem side in Menu.AllSides)
-    {
-        <li>
-            <div class="menu-item">
-                <h3 class="name">@side.ToString()</h3>
-                <div class="price">
-                    Price @side.Price
-                </div>
-                <div class="calories">
-                    Calories @side.Calories
-                </div>
-            </div>
-        </li>
-    }
-</ul>
-<h2>Drinks</h2>
-<ul class="drinks">
-    @foreach(IOrderItem drink in Menu.AllDrinks)
-    {
-    <li>
-        <div class="menu-item">
-            <h3 class="name">@drink.ToString()</h3>
-            <div class="price">Price @drink.Price</div>
-            <div class="calories">Calories @drink.Calories</div>
+        <h4>Calories</h4>
+        <div>
+            Between
+            <input name="CMin" type="number" min="0" max="1000" step="1" placeholder="min" />
+            and
+            <input name="CMax" type="number" min="0" max="1000" step="1" placeholder="max" />
         </div>
 
+        <h4>Prices</h4>
+        <div>
+            Between
+            <input name="PMin" type="number" min="0" max="10" step="0.1" placeholder="min" />
+            and
+            <input name="PMax" type="number" min="0" max="10" step="0.1" placeholder="max" />
+        </div>
 
-    </li>
+    </div>
+
+    <h1>Cowboy Cafe</h1>
+    <p>
+        We at Cowboy Cafe are proud to bring you authentic trail meals from the American West.
+        Shake off the dust on your boots and sake your thirst with one of our old-fashioned
+        hand-jerked sodas. Dip your Pan de Campo into a bowl of beans.
+        Or conquer the mighty Texas Triple Burger! You've had a hard ride - so take it easy with us
+    </p>
+    @foreach (IOrderItem check in Model.items)
+    {
+        if (check.ItemType == "Entree")
+        {
+            Model.EntreeCheck = true;
+        }
+        if (check.ItemType == "Side")
+        {
+            Model.SideCheck = true;
+        }
+        if (check.ItemType == "Drink")
+        {
+            Model.DrinkCheck = true;
+        }
     }
-</ul>
+    @if (Model.EntreeCheck)
+    {
+        <h2>Entree</h2>
+        <ul class="entrees">
+            @foreach (IOrderItem entree in Model.items)
+            {
+                @if (entree.ItemType == "Entree")
+                {
+                    <li>
+                        <div class="menu-item">
+
+                            <h3 class="name">@entree.ToString()</h3>
+                            <div class="price">Price $@entree.Price</div>
+                            <div class="calories">Calories @entree.Calories</div>
+                            
+
+                        </div>
+
+
+                    </li>
+                    }
+                }
+
+        </ul>
+    }
+
+    @if (Model.SideCheck)
+    {
+        <h2>Sides</h2>
+        <ul class="sides">
+            @foreach (IOrderItem side in Model.items)
+            {
+                @if (side.ItemType == "Side")
+                {
+                    <li>
+                        <div class="menu-item">
+
+                            <h3 class="name">@side.ToString()</h3>
+                            <div class="price">
+                                Price $@side.Price
+                            </div>
+                            <div class="calories">
+                                Calories @side.Calories
+                            </div>
+
+
+                        </div>
+                    </li>
+                }
+            }
+        </ul>
+    }
+
+    @if (Model.DrinkCheck)
+    {
+        <h2>Drinks</h2>
+        <ul class="drinks">
+            @foreach (IOrderItem drink in Model.items)
+            {
+                @if (drink.ItemType == "Drink")
+                {
+                    <li>
+                        <div class="menu-item">
+
+                            <h3 class="name">@drink.ToString()</h3>
+                            <div class="price">Price $@drink.Price</div>
+                            <div class="calories">Calories @drink.Calories</div>
+
+
+                        </div>
+
+
+                    </li>
+                }
+            }
+        </ul>
+    }
+
+</form>
+
+
